--- a/gmaps-localization/gmaps-localization.html
+++ b/gmaps-localization/gmaps-localization.html
@@ -63,3 +63,12 @@
 		},
 	})
 </script>
+
+#Implementation
+
+```html
+<gmaps-localization apikey="YOUR_API_KEY", width="500px", height="500px" >
+
+	</gmaps-localization>
+
+	```
